--- a/assets_src/package.json
+++ b/assets_src/package.json
@@ -28,6 +28,7 @@
         "css/brands.css",
         "css/v4-shims.min.css",
         "css/regular.min.css",
+        "css/main.css",
         "css/style.css.map",
         "css/fontawesome.min.css",
         "css/solid.min.css",
